--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "electron-build": "webpack --config electron.webpack.config.js ",
     "webp-elec-dev": "webpack --watch --config electron.webpack.config.js",
     "webp-react-dev": "webpack --watch --config react.webpack.config.js",
-    "format": "prettier --write \"**/*.js\"",
+    "format": "eslint --fix",
     "serve": "gatsby serve",
     "clean": "gatsby clean && mkdir public && echo '{\"main\":\"main.js\"}' > public/package.json && yarn cache clean",
     "dev-tool": "npx react-devtools"
@@ -69,6 +69,7 @@
     "babel-loader": "^8.1.0",
     "concurrently": "^5.2.0",
     "electron-builder": "^22.7.0",
+    "electron-osx-sign": "^0.4.17",
     "electron-reload": "^1.5.0",
     "electron-reloader": "^1.0.1",
     "electron-serve": "^1.0.0",
@@ -80,6 +81,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-standard": "^4.0.1",
     "gatsby-plugin-lodash": "^3.3.10",
     "husky": "^4.2.5",
