Success File Load Dialog with Electron and React and GatsbyJS Stack🎉

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "webp-react-dev": "webpack --watch --config react.webpack.config.js",
     "format": "prettier --write \"**/*.js\"",
     "serve": "gatsby serve",
-    "clean": "gatsby clean && mkdir public && echo '{\"main\":\"main.js\"}' > public/package.json && yarn cache clean",
+    "clean": "gatsby clean && mkdir public && echo '{\"main\":\"main.js\"}' > public/package.json && yarn cache clean && rm -rf ./node_modules",
     "dev-tool": "npx react-devtools"
   },
   "repository": "git@github.com:huuyafwww/harver.git",
@@ -28,7 +28,7 @@
     "about-window": "^1.13.4",
     "babel-plugin-styled-components": "^1.10.7",
     "build-url": "^2.0.0",
-    "electron": "^9.1.0",
+    "electron": "^9.2.0",
     "electron-config": "^2.0.0",
     "electron-context-menu": "^2.2.0",
     "electron-dl": "^3.0.1",
@@ -37,7 +37,7 @@
     "electron-log": "^4.2.2",
     "electron-packager": "^15.0.0",
     "electron-store": "^6.0.0",
-    "gatsby": "^2.23.12",
+    "gatsby": "^2.24.36",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-manifest": "^2.4.14",
