Add Recieve Har File Data Proccess

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "about-window": "^1.13.4",
     "babel-plugin-styled-components": "^1.10.7",
     "build-url": "^2.0.0",
+    "chart.js": "^2.9.3",
     "electron": "^9.2.0",
     "electron-config": "^2.0.0",
     "electron-context-menu": "^2.2.0",
@@ -53,6 +54,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
