--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gatsby-transformer-sharp": "^2.5.7",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.5",
+    "moment": "^2.27.0",
     "open": "^7.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
