--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "sharp": "^0.25.4",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
