--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "**/public": true,
         "**/node_modules":true,
         "yarn.lock":true
-    }
+    },
+    "editor.formatOnSave" : true
 }
