--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.20",
     "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.14",
@@ -59,6 +60,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.8",
     "sharp": "^0.25.4",
     "styled-components": "^5.1.1",
     "url-parse": "^1.4.7"
