--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
-    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-google-charts": "^3.0.15",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
