Support dynamic toggle table items

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "format-watch": "onchange './src/**/{*.js,app.css,componentsCustom.css}' -- prettier --config ./.prettierrc.js --write {{changed}}",
     "serve": "gatsby serve",
     "clean": "gatsby clean && mkdir public && echo '{\"main\":\"main.js\"}' > public/package.json && yarn cache clean && rm -rf ./node_modules",
-    "dev-tool": "npx react-devtools"
+    "dev-tool": "npx react-devtools",
+    "reset": "yarn clean && yarn install && yarn build",
+    "latest": "yarn upgrade --latest"
   },
   "repository": "git@github.com:huuyafwww/harver.git",
   "bugs": {
@@ -27,50 +29,50 @@
   "dependencies": {
     "about-window": "^1.13.4",
     "babel-plugin-styled-components": "^1.10.7",
-    "build-url": "^2.0.0",
+    "build-url": "^6.0.1",
     "chart.js": "^2.9.3",
-    "electron": "^9.2.0",
+    "electron": "^10.1.1",
     "electron-context-menu": "^2.2.0",
     "electron-dl": "^3.0.1",
     "electron-find": "^1.0.6",
     "electron-is-dev": "^1.2.0",
-    "electron-log": "^4.2.2",
-    "electron-packager": "^15.0.0",
+    "electron-log": "^4.2.4",
+    "electron-packager": "^15.1.0",
     "electron-store": "^6.0.0",
-    "gatsby": "^2.24.36",
-    "gatsby-image": "^2.4.9",
+    "gatsby": "^2.24.58",
+    "gatsby-image": "^2.4.17",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.4.14",
-    "gatsby-plugin-offline": "^3.2.20",
+    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-sharp": "^2.6.35",
     "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-sharp": "^2.5.7",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.5",
-    "moment": "^2.27.0",
-    "open": "^7.1.0",
+    "gatsby-source-filesystem": "^2.3.29",
+    "gatsby-transformer-sharp": "^2.5.14",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.3.0",
+    "moment": "^2.28.0",
+    "open": "^7.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.10.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.0.8",
-    "sharp": "^0.25.4",
-    "styled-components": "^5.1.1",
+    "sharp": "^0.26.0",
+    "styled-components": "^5.2.0",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.11.2",
     "babel-eslint": "^10.1.0",
@@ -79,7 +81,7 @@
     "electron-builder": "^22.7.0",
     "electron-osx-sign": "^0.4.17",
     "electron-serve": "^1.0.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-loader": "^4.0.2",
@@ -87,13 +89,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
     "gatsby-plugin-lodash": "^3.3.10",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.3.0",
     "onchange": "^7.0.2",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.1",
     "react-devtools": "^4.8.2",
     "wait-on": "^5.1.0",
     "webpack": "^4.43.0",
